tools/KLEE_SOURCE/Release+Asserts/bin/temp_test/klee-out-23/test000006.ptr.err
Error: memory error: out of bound pointer
File: /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list1.c
Line: 17
Stack: 
	#0 00000045 in remove_from_list (head=27743600, node=27675824) at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list1.c:17
	#1 00000087 in main () at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list1.c:38
Info: 
	address: (Add w64 16
         (ReadLSB w64 8 a1))
	example: 16
	range: [0, 18446744073709551615]
	next: object at 27364432 of size 3
		MO7[3] allocated at global:.str
